--- a/style_print.css
+++ b/style_print.css
@@ -1,3 +1,3 @@
-#main_menu, #sidebar, #header .join, #top_panel {
+#header_sub_content, #sidebar, #header .join, #top_panel{
 	display:none;
 }
